--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
       "target": "ESNext",
       "declaration": true,
+      "declarationMap": true,
       "module": "commonjs",
       "strict": true,
       "esModuleInterop": true,
