--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "forceConsistentCasingInFileNames": true,
       "outDir": "./dist",
       "baseUrl": "./src",
+      "typeRoots": ["node_modules/@types", "src/types"],  // Add the necessary path
       "paths": {
         "*": ["*", "node_modules/*"]
       }
