fix: make this package private

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestjs-abstract-mongo-repository",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "An abstract MongoDB entity repository for NestJS using Mongoose",
   "engines": {
     "node": ">=16.17.0",
@@ -26,9 +26,7 @@
   "author": "Muhammad Hamza Asif",
   "license": "ISC",
   "homepage": "https://github.com/Hijazi313/nestjs-abstract-mongo-repository",
-  "publishConfig": {
-    "access": "restricted"
-  },
+  "private": true,
   "peerDependencies": {
     "@nestjs/common": "^10.0.0",
     "mongoose": "^8.0.3"
